# dhist

./: Cargo.toml  README.md  flake.nix  rust-toolchain.toml
src/: cli.rs  db.rs  increment.rs  main.rs  sort.rs  wrap.rs
